syntax = "proto3";

package api.points.v5;
import "google/api/annotations.proto";
option go_package = "anjuke/api/points/v5;v5";
option java_multiple_files = true;
option java_package = "api.points.v5";
option java_outer_classname = "PointsProtoV5";

service Points {
	rpc CreatePoints (CreatePointsRequest) returns (CreatePointsReply){
		option (google.api.http) = {
			post: "/points/create"
			body:"*"
		};
	};
}

message CreatePointsRequest {}
message CreatePointsReply {}
